--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -5,7 +5,7 @@
   "description": "The missing link between your tydom box and an MQTT broker, hassio addon version",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "url": "https://github.com/mrwiwi/tydom2mqtt.git",
-  "startup": "services",
+  "startup": "system",
   "boot": "auto",
   "host_network": true,
   "image":"mrwiwi/tydom2mqtt_edge",
