--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,22 +1,24 @@
 {
   "name": "tydom2mqtt_edge",
-  "version": "latest",
+  "version": "0.8",
   "slug": "tydom2mqtt_edge",
-  "description": "The missing unofficial link between your Deltadore's Tydom hub and an MQTT broker, hassio addon version",
+  "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "url": "https://github.com/mrwiwi/tydom2mqtt.git",
-  "startup": "system",
+  "startup": "services",
   "boot": "auto",
   "host_network": true,
   "image":"mrwiwi/tydom2mqtt_edge",
   "options":
   {
     "TYDOM_MAC":"001A25xxxxxx",
-    "TYDOM_IP": "",
-    "TYDOM_PASSWORD":"TYDOM_PASSWORD",
+    "TYDOM_IP": "192.168.1.xx",
+    "TYDOM_PASSWORD":"tydom_password",
     "MQTT_HOST": "localhost",
-    "MQTT_USER": "user",
-    "MQTT_PASSWORD": "pass"
+    "MQTT_USER": "mqtt_user",
+    "MQTT_PASSWORD": "mqtt_pass",
+    "MQTT_PORT": "1883",
+    "MQTT_SSL": "true"
   },
   "schema":
   {
@@ -24,7 +26,9 @@
     "TYDOM_IP": "str?",
     "TYDOM_PASSWORD":"str",
     "MQTT_HOST": "str?",
-    "MQTT_USER": "str",
-    "MQTT_PASSWORD": "str"
+    "MQTT_USER": "str?",
+    "MQTT_PASSWORD": "str?",
+    "MQTT_PORT": "port?",
+    "MQTT_SSL": "bool?"
   }  
 }
