--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -18,7 +18,7 @@
     "MQTT_USER": "mqtt_user",
     "MQTT_PASSWORD": "mqtt_pass",
     "MQTT_PORT": 1883,
-    "MQTT_SSL": true
+    "MQTT_SSL": false
   },
   "schema":
   {
