--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,6 +1,6 @@
 {
   "name": "tydom2mqtt_edge",
-  "version": "release-0.81",
+  "version": "release-0.82",
   "slug": "tydom2mqtt_edge",
   "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
@@ -11,9 +11,10 @@
   "image":"mrwiwi/tydom2mqtt_edge",
   "options":
   {
-    "TYDOM_MAC":"001A25xxxxxx",
+    "TYDOM_MAC": "001A25xxxxxx",
     "TYDOM_IP": "192.168.1.xx",
     "TYDOM_PASSWORD":"tydom_password",
+    "TYDOM_ALARM_PIN": "",
     "MQTT_HOST": "localhost",
     "MQTT_USER": "mqtt_user",
     "MQTT_PASSWORD": "mqtt_pass",
@@ -25,6 +26,7 @@
     "TYDOM_MAC":"str",
     "TYDOM_IP": "str?",
     "TYDOM_PASSWORD":"str",
+    "TYDOM_ALARM_PIN":"int?",
     "MQTT_HOST": "str?",
     "MQTT_USER": "str?",
     "MQTT_PASSWORD": "str?",
