--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,6 +1,6 @@
 {
   "name": "tydom2mqtt_edge",
-  "version": "release-0.83",
+  "version": "release-0.84",
   "slug": "tydom2mqtt_edge",
   "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
@@ -15,6 +15,8 @@
     "TYDOM_IP": "192.168.1.xx",
     "TYDOM_PASSWORD":"tydom_password",
     "TYDOM_ALARM_PIN": "",
+    "TYDOM_ALARM_HOME_ZONE": 1,
+    "TYDOM_ALARM_NIGHT_ZONE": 2,
     "MQTT_HOST": "localhost",
     "MQTT_USER": "mqtt_user",
     "MQTT_PASSWORD": "mqtt_pass",
@@ -27,6 +29,8 @@
     "TYDOM_IP": "str?",
     "TYDOM_PASSWORD":"str",
     "TYDOM_ALARM_PIN":"int?",
+    "TYDOM_ALARM_HOME_ZONE":"int?",
+    "TYDOM_ALARM_NIGHT_ZONE":"int?",
     "MQTT_HOST": "str?",
     "MQTT_USER": "str?",
     "MQTT_PASSWORD": "str?",
