--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,11 +1,11 @@
 {
   "name": "tydom2mqtt_edge",
-  "version": "release-0.86",
+  "version": "test_0.85",
   "slug": "tydom2mqtt_edge",
   "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "url": "https://github.com/mrwiwi/tydom2mqtt.git",
-  "startup": "services",
+  "startup": "system",
   "boot": "auto",
   "host_network": true,
   "options":
