--- a/tydom2mqtt_hassio/Dockerfile
+++ b/tydom2mqtt_hassio/Dockerfile
@@ -8,7 +8,8 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # Setup base
 # hadolint ignore=DL3003
 RUN \
-    apk add --no-cache python3 \
+    apk add --no-cache bashio \
+    && apk add --no-cache python3 \
     && pip3 install websockets gmqtt requests \
     && curl -L -s \
         "https://github.com/mrwiwi/tydom2mqtt/archive/0.85.tar.gz" \
