--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,6 +1,6 @@
 {
   "name": "tydom2mqtt_edge",
-  "version": "test_0.8xxxxxxx",
+  "version": "test_0.8xxxxxxxx",
   "slug": "tydom2mqtt_edge",
   "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
   "arch": ["aarch64", "amd64"],
