--- a/tydom2mqtt_hassio/Dockerfile
+++ b/tydom2mqtt_hassio/Dockerfile
@@ -12,6 +12,7 @@ RUN \
     \
     && apt-get install -y \
         python3 \
+        python3-pip \
     \
     && pip3 install websockets gmqtt requests \
     \
