--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,9 +1,9 @@
 {
   "name": "tydom2mqtt_edge",
-  "version": "test_0.8",
+  "version": "test_0.85a",
   "slug": "tydom2mqtt_edge",
   "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
-  "arch": ["aarch64", "amd64"],
+  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "url": "https://github.com/mrwiwi/tydom2mqtt.git",
   "startup": "system",
   "boot": "auto",
