--- a/tydom2mqtt_hassio/Dockerfile
+++ b/tydom2mqtt_hassio/Dockerfile
@@ -10,7 +10,7 @@ RUN apk add --no-cache python3
 COPY requirements.txt /tmp/
 RUN pip3 install --requirement /tmp/requirements.txt
 
-RUN curl -L -s "https://github.com/portainer/portainer/releases/download/1.23.2/portainer-1.23.2-linux-${ARCH}.tar.gz" | tar zxvf - -C /opt/
+RUN curl -L -s "https://github.com/mrwiwi/tydom2mqtt/archive/0.85.tar.gz" | tar zxvf - -C /opt/
 
 # Copy root filesystem
 COPY rootfs /
