--- a/tydom2mqtt_hassio/Dockerfile
+++ b/tydom2mqtt_hassio/Dockerfile
@@ -13,6 +13,9 @@ RUN pip3 install --requirement /tmp/requirements.txt
 RUN curl -L -s \
         "https://github.com/mrwiwi/tydom2mqtt/archive/0.85.tar.gz" \
         | tar zxvf - -C /opt/
+
+RUN mv /opt/tydom2mqtt* /opt/tydom2mqtt
+
 # Copy root filesystem
 COPY rootfs /
 
