--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,40 +1,40 @@
 {
-  "name": "tydom2mqtt_edge",
-  "version": "test_0.85g",
-  "slug": "tydom2mqtt_edge",
-  "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
-  "url": "https://github.com/mrwiwi/tydom2mqtt.git",
-  "startup": "system",
-  "boot": "auto",
-  "host_network": true,
-  "options":
-  {
-    "TYDOM_MAC": "001A25xxxxxx",
-    "TYDOM_IP": "192.168.1.xx",
-    "TYDOM_PASSWORD":"tydom_password",
-    "TYDOM_ALARM_PIN": "",
-    "TYDOM_ALARM_HOME_ZONE": 1,
-    "TYDOM_ALARM_NIGHT_ZONE": 2,
-    "MQTT_HOST": "localhost",
-    "MQTT_USER": "mqtt_user",
-    "MQTT_PASSWORD": "mqtt_pass",
-    "MQTT_PORT": 1883,
-    "MQTT_SSL": false
-  },
-  "schema":
-  {
-    "log_level": "list(trace|debug|info|notice|warning|error|fatal)?",
-    "TYDOM_MAC":"str",
-    "TYDOM_IP": "str?",
-    "TYDOM_PASSWORD":"str",
-    "TYDOM_ALARM_PIN":"int?",
-    "TYDOM_ALARM_HOME_ZONE":"int?",
-    "TYDOM_ALARM_NIGHT_ZONE":"int?",
-    "MQTT_HOST": "str?",
-    "MQTT_USER": "str?",
-    "MQTT_PASSWORD": "str?",
-    "MQTT_PORT": "port?",
-    "MQTT_SSL": "bool?"
-  }  
-}
+    "name": "tydom2mqtt_edge",
+    "version": "release-0.86",
+    "slug": "tydom2mqtt_edge",
+    "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
+    "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+    "url": "https://github.com/mrwiwi/tydom2mqtt.git",
+    "startup": "services",
+    "boot": "auto",
+    "host_network": true,
+    "image":"mrwiwi/tydom2mqtt_edge",
+    "options":
+    {
+      "TYDOM_MAC": "001A25xxxxxx",
+      "TYDOM_IP": "192.168.1.xx",
+      "TYDOM_PASSWORD":"tydom_password",
+      "TYDOM_ALARM_PIN": "",
+      "TYDOM_ALARM_HOME_ZONE": 1,
+      "TYDOM_ALARM_NIGHT_ZONE": 2,
+      "MQTT_HOST": "localhost",
+      "MQTT_USER": "mqtt_user",
+      "MQTT_PASSWORD": "mqtt_pass",
+      "MQTT_PORT": 1883,
+      "MQTT_SSL": false
+    },
+    "schema":
+    {
+      "TYDOM_MAC":"str",
+      "TYDOM_IP": "str?",
+      "TYDOM_PASSWORD":"str",
+      "TYDOM_ALARM_PIN":"int?",
+      "TYDOM_ALARM_HOME_ZONE":"int?",
+      "TYDOM_ALARM_NIGHT_ZONE":"int?",
+      "MQTT_HOST": "str?",
+      "MQTT_USER": "str?",
+      "MQTT_PASSWORD": "str?",
+      "MQTT_PORT": "port?",
+      "MQTT_SSL": "bool?"
+    }  
+  }
