--- a/tydom2mqtt_hassio/Dockerfile
+++ b/tydom2mqtt_hassio/Dockerfile
@@ -5,7 +5,7 @@ FROM ${BUILD_FROM}
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Setup base
-RUN apk add --no-cache python3
+# RUN apk add --no-cache python3
 COPY requirements.txt /tmp/
 RUN pip3 install --requirement /tmp/requirements.txt
 
