--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -13,7 +13,7 @@
     "TYDOM_MAC": "001A25xxxxxx",
     "TYDOM_IP": "192.168.1.xx",
     "TYDOM_PASSWORD":"tydom_password",
-    "TYDOM_ALARM_PIN": "",
+    "TYDOM_ALARM_PIN": "123456",
     "TYDOM_ALARM_HOME_ZONE": 1,
     "TYDOM_ALARM_NIGHT_ZONE": 2,
     "MQTT_HOST": "localhost",
