--- a/tydom2mqtt_hassio/config.json
+++ b/tydom2mqtt_hassio/config.json
@@ -1,6 +1,6 @@
 {
     "name": "tydom2mqtt_edge",
-    "version": "release-0.88",
+    "version": "release-0.89c",
     "slug": "tydom2mqtt_edge",
     "description": "Link between a Delta Dore's Tydom Hub and and a MQTT broker, unofficial of course, hassio addon version",
     "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
@@ -15,7 +15,7 @@
       "TYDOM_MAC": "001A25xxxxxx",
       "TYDOM_IP": "192.168.1.xx",
       "TYDOM_PASSWORD":"tydom_password",
-      "TYDOM_ALARM_PIN": "",
+      "TYDOM_ALARM_PIN": "123456",
       "TYDOM_ALARM_HOME_ZONE": 1,
       "TYDOM_ALARM_NIGHT_ZONE": 2,
       "MQTT_HOST": "localhost",
