--- a/tydom2mqtt_edge/Dockerfile
+++ b/tydom2mqtt_edge/Dockerfile
@@ -5,7 +5,7 @@ FROM ${BUILD_FROM}
 ENV LANG C.UTF-8
 
 # Copy data for add-on
-
+COPY . /
 
 COPY requirements.txt /tmp/
 RUN apk add --no-cache python3
@@ -13,12 +13,12 @@ RUN apk add --no-cache python3
 RUN pip3 install --requirement /tmp/requirements.txt
 
 RUN curl -L -s \
-        "https://github.com/mrwiwi/tydom2mqtt/archive/0.90d.tar.gz" \
+        "https://github.com/mrwiwi/tydom2mqtt/archive/0.90c.tar.gz" \
         | tar zxvf - -C /opt/
 
 RUN mv /opt/tydom2mqtt* /opt/tydom2mqtt
-COPY . /
-#COPY rootfs /
-#COPY run.sh /run.sh
 RUN chmod a+x /run.sh
+
+WORKDIR /data
+
 CMD [ "/run.sh" ]
