--- a/tydom2mqtt_edge/config.json
+++ b/tydom2mqtt_edge/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Tydom2MQTT - Beta",
-  "version": "release_0.94",
+  "version": "release_0.94b",
   "slug": "tydom2mqtt_hassio",
   "description": "Link between a Delta Dore's Tydom 1.0 Hub and and a MQTT broker, unofficial of course, hassio addon version",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
